--- a/src/styles/informationen.css
+++ b/src/styles/informationen.css
@@ -1,20 +1,18 @@
-ul li{
+ul li {
   font-weight: 400 !important;
   padding: 5px !important;
 }
 
-.info--container{
+.info--container {
   padding: 0;
   margin: 17px auto 170px;
   height: 100%;
   width: 100vw;
- 
 }
 
 .info--header {
   padding: 50px 0;
   font-size: 2rem;
-
 }
 
 .each-slide > div {
@@ -25,10 +23,10 @@ ul li{
   height: 460px;
 }
 
-.each-slide > div:hover{
+.each-slide > div:hover {
   transform: scale(1.05);
   transition: 1s ease;
-} 
+}
 
 .each-slide span {
   padding: 15px;
@@ -37,16 +35,14 @@ ul li{
   text-align: center;
   color: white;
   border-radius: 10px;
-  filter: opacity(90%);	
-  
+  filter: opacity(90%);
 }
 
-.each-slide span:hover{
+.each-slide span:hover {
   background: var(--rot);
-
 }
 
-.klasse--title { 
+.klasse--title {
   display: flex;
   justify-content: space-between;
   font-size: large;
@@ -57,11 +53,9 @@ ul li{
   width: 77vw;
 }
 
-
-
-.klasse--title > p {  
+.klasse--title > p {
   padding-top: 10px;
-  width:100px;
+  width: 100px;
   height: 40px;
   background-color: var(--rot);
   color: white;
@@ -71,10 +65,9 @@ ul li{
   margin-right: 10px;
 }
 
-.klasse--title > p:hover{
+.klasse--title > p:hover {
   background-color: var(--blau);
   color: white;
-
 }
 
 .klasse--grid {
@@ -88,25 +81,21 @@ ul li{
   justify-content: center;
   align-items: center;
   width: 77vw;
-
 }
 
-
-
-.klasse--card{
+.klasse--card {
   display: flex;
   flex-wrap: wrap;
   text-align: left;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
   padding: 20px;
   height: 250px;
   width: auto;
   box-shadow: 2px 2px 5px black;
-  
 }
- 
-.klasse--card:hover{
+
+.klasse--card:hover {
   box-shadow: 2px 2px 20px black;
   transition: 1s ease;
 }
@@ -114,46 +103,44 @@ ul li{
   font-size: 1.5em;
   margin: 0;
   padding: 0;
-
 }
 
-.klasse--card:nth-child(1){
+.klasse--card:nth-child(1) {
   grid-area: 1 / 1 / 2 / 3;
   background-color: var(--rot);
 }
 
-.klasse--card:nth-child(2){
-  grid-area: 1 / 3 / 2 / 5; 
+.klasse--card:nth-child(2) {
+  grid-area: 1 / 3 / 2 / 5;
   background-color: white;
-  color:black
+  color: black;
 }
 
-.klasse--card:nth-child(3){
+.klasse--card:nth-child(3) {
   grid-area: 1 / 5 / 2 / 7;
   background-color: var(--blau);
 }
 
-
-.klasse--card:nth-child(4){
-  grid-area: 2 / 1 / 3 / 4; 
+.klasse--card:nth-child(4) {
+  grid-area: 2 / 1 / 3 / 4;
   background-color: white;
-  color:black
+  color: black;
 }
 
-.klasse--card:nth-child(5){
-  grid-area: 2 / 4 / 3 / 7; 
+.klasse--card:nth-child(5) {
+  grid-area: 2 / 4 / 3 / 7;
   background-color: var(--rot);
 }
 
-.klasse--card img{
-  max-width:100px;
+.klasse--card img {
+  max-width: 100px;
   width: 100%;
   margin-right: 20px;
   padding: 7px;
   height: auto;
 }
 
-.link-btn{
+.link-btn {
   color: white;
   background-color: var(--blau);
   height: 50px;
@@ -162,132 +149,118 @@ ul li{
   font-size: large;
   padding-top: 12px;
   margin: 40px 0 10px;
-
 }
 
-.link-btn:hover{
-background-color: var(--rot);
+.link-btn:hover {
+  background-color: var(--rot);
 }
 
-@media screen and (max-width: 1025px){
-
- 
+@media screen and (max-width: 1025px) {
   .klasse--grid {
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      width: 82vw;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 82vw;
   }
 
-  .klasse--card:nth-child(1){
-      grid-area: 1 / 1 / 2 / 4;
-      background-color: var(--rot);
+  .klasse--card:nth-child(1) {
+    grid-area: 1 / 1 / 2 / 4;
+    background-color: var(--rot);
   }
-  
-  .klasse--card:nth-child(2){
-      grid-area: 1 / 4 / 2 / 7; 
-      background-color: white;
-      color:black
+
+  .klasse--card:nth-child(2) {
+    grid-area: 1 / 4 / 2 / 7;
+    background-color: white;
+    color: black;
   }
-  
-  .klasse--card:nth-child(3){
-      grid-area: 2 / 4 / 3 / 7;
-      background-color: var(--blau);
+
+  .klasse--card:nth-child(3) {
+    grid-area: 2 / 4 / 3 / 7;
+    background-color: var(--blau);
   }
-  
-  
-  .klasse--card:nth-child(4){
-      grid-area: 2 / 1 / 3 / 4; 
-      background-color: white;
-      color:black
+
+  .klasse--card:nth-child(4) {
+    grid-area: 2 / 1 / 3 / 4;
+    background-color: white;
+    color: black;
   }
-  
-  .klasse--card:nth-child(5){
-      grid-area: 3 / 1 / 4 / 7; 
-      background-color: var(--rot);
+
+  .klasse--card:nth-child(5) {
+    grid-area: 3 / 1 / 4 / 7;
+    background-color: var(--rot);
   }
-  
 }
 
 @media screen and (max-width: 600px) {
-
   .each-slide > div {
     height: 370px;
   }
   .leistungen--header {
     padding: 27px 0;
     font-size: 1.7rem;
- 
-}
-  
+  }
 
   .klasse--grid {
-      display: block;
-      width: 93vw;
+    display: block;
+    width: 93vw;
   }
-  .klasse--title { 
+  .klasse--title {
     padding-left: 7px;
-      font-size: medium;
-      flex-direction: column;
-    
-    }
-    .klasse--title h2{
-      font-size: 1.3em;
-}
-.klasse--title p{
-  width: 80px;
-  height: 37px;
-  
-}
+    font-size: medium;
+    flex-direction: column;
+  }
+  .klasse--title h2 {
+    font-size: 1.3em;
+  }
+  .klasse--title p {
+    width: 80px;
+    height: 37px;
+  }
 
-.klasse--card img{
-  margin-right: 0 auto;
-}
-
+  .klasse--card img {
+    margin-right: 0 auto;
+  }
 }
 
 /* sub -pages (Infos) */
 
-.info-img{
-  
+.info-img {
   width: 100vw;
-  height:40vh;
+  height: 40vh;
   object-fit: cover;
   margin-top: 20px;
   filter: saturate(37%);
 }
 
-.textContainer{
+.textContainer {
   display: flex;
   flex-direction: column;
   gap: 30px;
   text-align: left;
   width: 60vw;
-  margin: 100px auto 200px; 
+  margin: 100px auto 200px;
   padding: 0;
 }
 
-
-.theorieprüfung h1{
-  border-bottom: .7px solid gray;
+.theorieprüfung h1 {
+  border-bottom: 0.7px solid gray;
   padding: 0 0 20px;
 }
 
-.textContainer h2{
+.textContainer h2 {
   padding-left: 0;
   margin: 0;
 }
 
-.textContainer ul li{
+.textContainer ul li {
   padding: 10px 0;
   font-size: 1.1em;
   font-weight: 550;
 }
 
-.textContainer p{
+.textContainer p {
   font-size: 1.1rem;
   padding: 0;
   margin: 0;
-
 }
 
 .textContainer--top {
@@ -298,53 +271,51 @@ background-color: var(--rot);
   border-bottom: 0.7px solid gray;
 }
 
-.textContainer--top button{
+.textContainer--top button {
   font-size: 1.1rem;
   background-color: var(--blau);
   color: white;
-  width:fit-content;
+  width: fit-content;
   padding: 10px 20px;
   border-radius: 20px;
   border: none;
 }
 
-.textContainer button:hover{
+.textContainer button:hover {
   background-color: var(--rot);
 }
 
-.textContainer p span{
+.textContainer p span {
   font-size: 1.3rem;
   color: var(--rot);
   text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.404);
   font-weight: 600;
- 
-
 }
 
-.theorieunterricht{
-  border-bottom: .7px solid gray;
+.theorieunterricht {
+  border-bottom: 0.7px solid gray;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   flex-wrap: wrap;
 }
 
-.theorie--title{
+.theorie--title {
   font-size: 2.5em;
   letter-spacing: 5px;
   padding-top: 40px;
   padding-bottom: 10px;
 }
 
-.textContainer h2{
-  border-bottom: .7px solid gray;
+.textContainer h2 {
+  border-bottom: 0.7px solid gray;
   padding-bottom: 5px;
 }
 
-.theorieBanner img{
- filter: brightness(70%);
+.theorieBanner img {
+  filter: brightness(70%);
 }
-.theorieBanner h1{
+.theorieBanner h1 {
   font-size: 2.7em;
   position: absolute;
   top: 45%;
@@ -354,33 +325,29 @@ background-color: var(--rot);
 }
 
 .t-kalendar {
-  margin: 0 ;
+  margin: 0;
 }
 
-.t-kalendar h2{
+.t-kalendar h2 {
   padding: 5px 0;
 }
 
-
-
-.theorieunterricht--thema{
+.theorieunterricht--thema {
   display: flex;
   justify-content: space-evenly;
-  gap:10px;
-  
+  gap: 10px;
 }
 
-.theorieunterricht--thema p{
-padding: 10px 0;
-
+.theorieunterricht--thema p {
+  padding: 10px 0;
 }
-.theorieunterricht--thema-left{
+.theorieunterricht--thema-left {
   width: 50%;
 }
-.theorieunterricht--thema-right{
+.theorieunterricht--thema-right {
   width: 50%;
 }
-.theorieunterricht--right{
+.theorieunterricht--right {
   color: var(--rot);
   font-size: 1.1em;
   font-weight: 550;
@@ -388,7 +355,6 @@ padding: 10px 0;
 }
 
 .klasse--card--dropdown {
- 
   padding: 10px 20px;
   height: 50vh;
   width: auto;
@@ -399,11 +365,9 @@ padding: 10px 0;
   color: black;
   z-index: 999;
   position: absolute;
-  overflow:scroll;
+  overflow: scroll;
   overflow-x: hidden;
 }
-
-
 
 .klasse--card--dropdown h4 {
   font-size: 1.2em;
@@ -411,11 +375,9 @@ padding: 10px 0;
   color: black;
 }
 
-
-
-@media screen and (max-width: 1025px){
-  .textContainer{
-    margin: 30px auto 150px; 
+@media screen and (max-width: 1025px) {
+  .textContainer {
+    margin: 30px auto 150px;
     width: 90vw;
   }
 
@@ -423,61 +385,52 @@ padding: 10px 0;
     padding-bottom: 20px;
   }
 
-  .textContainer h1{
+  .textContainer h1 {
     font-size: 1.8rem;
   }
 
   .klasse--card--dropdown {
- 
     padding: 10px 20px;
     height: 70vh;
-    
   }
 
-  .t-kalendar h3{
+  .t-kalendar h3 {
     padding: 15px 0;
     font-weight: 600;
   }
 }
 
 @media screen and (max-width: 700px) {
-  .theorieunterricht--thema{
+  .theorieunterricht--thema {
     display: flex;
     flex-direction: column;
   }
 
-  .theorie--title{
+  .theorie--title {
     font-size: 1.8em;
-
   }
-  .theorieunterricht--thema-left{
+  .theorieunterricht--thema-left {
     width: 100%;
   }
-  .theorieunterricht--thema-right{
+  .theorieunterricht--thema-right {
     width: 100%;
   }
 
-  .theorieunterricht--thema p{
+  .theorieunterricht--thema p {
     padding: 7px;
-    }
-  
   }
+}
 
 @media screen and (max-width: 410px) {
-  
   .textContainer--top > button {
     margin-top: 20px;
   }
-    
 }
 
 @media screen and (max-width: 300px) {
-  
-  .klasse--title { 
- 
+  .klasse--title {
     margin-left: 15px;
     font-size: small;
     margin-top: 40px;
-    }
-    
+  }
 }
